@@ -843,6 +843,8 @@ int check_forward_deliver(char *dir)
     chdir(dir);
 
 #ifdef QMAIL_EXT
+	fs = NULL;
+
     /* format the file name */
     if (strlen(TheExt)) {
         strcpy(tmpbuf,".qmail-");
@@ -859,9 +861,10 @@ int check_forward_deliver(char *dir)
                 }
             }
         }
-    } else {
-        fs = fopen(".qmail","r");
-    }
+    } 
+
+	if (fs == NULL)
+       fs = fopen(".qmail","r");
 #else
     fs = fopen(".qmail","r");
 #endif
